# Copyright 2024 The Tungsten Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

source_set("protocol") {
  sources = [
    "nostr_protocol_handler.cc",
    "nostr_protocol_handler.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/nostr/local_relay",
    "//chrome/common:nostr_scheme",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//net",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//url",
  ]
}

source_set("unit_tests") {
  testonly = true
  
  sources = [
    "nostr_protocol_handler_unittest.cc",
  ]
  
  deps = [
    ":protocol",
    "//base",
    "//base/test:test_support",
    "//content/test:test_support",
    "//testing/gtest",
    "//url",
  ]
}