# Copyright 2024 The Tungsten Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")

source_set("protocol") {
  sources = [
    "bech32.cc",
    "bech32.h",
    "nip19.cc",
    "nip19.h",
    "nostr_protocol_handler.cc",
    "nostr_protocol_handler.h",
    "nsite_resolver.cc",
    "nsite_resolver.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/nostr/local_relay",
    "//chrome/browser/nostr/nsite",
    "//chrome/browser/profiles",
    "//chrome/common:nostr_scheme",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//net",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//url",
  ]
}

source_set("unit_tests") {
  testonly = true
  
  sources = [
    "bech32_unittest.cc",
    "nip19_unittest.cc",
    "nostr_protocol_handler_unittest.cc",
    "nsite_resolver_unittest.cc",
  ]
  
  deps = [
    ":protocol",
    "//base",
    "//base/test:test_support",
    "//chrome/browser/nostr/nsite",
    "//chrome/browser/profiles:test_support",
    "//chrome/test:test_support",
    "//content/test:test_support",
    "//net:test_support",
    "//services/network:test_support",
    "//services/network/public/cpp",
    "//testing/gtest",
    "//url",
  ]
}